fixed color contrast error

--- a/src/components/form/Form-UI.scss
+++ b/src/components/form/Form-UI.scss
@@ -77,7 +77,7 @@
 }
 
 .login-form__server-message--success {
-  color: seagreen;
+  color: $Color--Text;
 }
 
 .login-form__submit-btn {
